--- a/Integer_encoding_simple_RNN.ipynb
+++ b/Integer_encoding_simple_RNN.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOp+ruX71+JOxUSN8DEnk6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +56,7 @@
       "metadata": {
         "id": "sLUY_ielzjGw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +69,7 @@
       "metadata": {
         "id": "Tgn0LA_50FvR"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +80,7 @@
       "metadata": {
         "id": "wReIrNfi1Iii"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +91,7 @@
       "metadata": {
         "id": "Q2OoyBOi1hG0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +106,7 @@
         "id": "vDCBl2gb1ny4",
         "outputId": "42af0584-1a12-4e91-dcca-f4798d045e66"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +149,7 @@
         "id": "NhsFiJlB1xDw",
         "outputId": "02f34ee6-7965-4663-edee-f16f6c1d8ee2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +193,7 @@
         "id": "XBY64v-q2Qi9",
         "outputId": "ab762ff5-ae9d-4a46-dcb5-e6abfa69af69"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +219,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Now we need to make the length of each sentence(also called as timestamp) because the model has fixed amount of input nodes. We wil do zero padding.\n",
+        "# Now we need to make the length of each sentence(also called as timestamp) same because the model has fixed amount of input nodes. We wil do zero padding.\n",
         "from keras.utils import pad_sequences\n",
         "sequences=pad_sequences(sequences,padding='post') # if padding='pre' then the zeros will come at the starting.\n",
         "sequences"
@@ -232,7 +231,7 @@
         "id": "A5VOWHug2dNu",
         "outputId": "1474be9a-83a7-4a65-84b8-763c409ef1f7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +265,7 @@
       "metadata": {
         "id": "f-5OWvpZ3udo"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +281,7 @@
         "id": "QAgR904I4zjq",
         "outputId": "a9337f63-ac92-495c-9a80-29e75aadb851"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +306,7 @@
         "id": "7m2-SQLN49Hu",
         "outputId": "ff78448e-081e-4f8e-d9ba-e982933fd3c8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +333,7 @@
         "id": "ZE4bTPih5Gr8",
         "outputId": "a8eae6b6-9588-4ac4-db35-1eb1be3423c8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +359,7 @@
         "id": "hm7DRfJ768SN",
         "outputId": "67a703cd-bac0-482a-814d-a8bcd2471401"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +382,7 @@
       "metadata": {
         "id": "JzqUqxYb7Jum"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +392,8 @@
         "model=Sequential()\n",
         "model.add(SimpleRNN(32,input_shape=(50,1),return_sequences=False,activation='relu'))\n",
         "model.add(Dense(1,activation='sigmoid'))\n",
-        "model.summary()"
+        "model.summary()\n",
+        "# input_shape=(50,1) i.e. length of each sentiment is 50 and each word is represented by an integer only(no. of features=1)."
       ],
       "metadata": {
         "colab": {
@@ -403,7 +403,7 @@
         "id": "S0CjI1hu7cW3",
         "outputId": "9c84390e-87df-4a18-d021-2b47b9e44a0f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
       "metadata": {
         "id": "FVTHuvMQ8eDP"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -515,7 +515,7 @@
         "id": "AccyfWTX8pUO",
         "outputId": "3f9f8e9b-ff24-4474-894a-8129fa9406c8"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
